--- a/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
+++ b/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
@@ -7,7 +7,16 @@
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   padding: 25px 25px 39px 25px;
-  margin-right: 80px;
+  margin: 0 80px 0 40px;
+
+  position: relative;
+  &::before {
+    content: url("../../images/Castle.svg");
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .links {
