add shared component and start layout search page

--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,9 @@
 
 // style
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -80,6 +82,15 @@ ul {
 
 li {
   list-style: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 code {
