--- a/src/screens/SearchPage/SearchPage.module.scss
+++ b/src/screens/SearchPage/SearchPage.module.scss
@@ -1,2 +1,24 @@
 @import "../../assets/style/theme.scss";
 @import "../../assets/style/mixin.scss";
+
+
+.main {
+  display: flex;
+  padding-top: 69px;
+  padding-bottom: 64px;
+}
+
+.sectionForm {
+  // display: flex;
+}
+
+.title {
+  font-size: 40px;
+  letter-spacing: 0.03em;
+}
+
+.description {
+  margin-top: 25px;
+  font-size: 20px;
+  letter-spacing: 0.02em;
+}
