--- a/src/shared/Input/Input.module.scss
+++ b/src/shared/Input/Input.module.scss
@@ -7,15 +7,21 @@
   font-size: 16px;
   letter-spacing: 0.02em;
   color: $Secondary-color-5;
-}
 
-.input {
-  width: 100%;
-  height: 43px;
-  margin-top: 15px;
-  padding: 0 20px;
-  font-size: 16px;
-  border: 1px solid $Secondary-color-4;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
-  border-radius: 5px;
+  & input {
+    width: 100%;
+    height: 43px;
+    margin-top: 15px;
+    padding: 0 20px;
+    font-size: 16px;
+    border: 1px solid $Secondary-color-4;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+    border-radius: 5px;
+
+    &::placeholder {
+      text-align: center;
+      color: $Secondary-color-5;
+      opacity: 0.4;
+    }
+  }
 }
