--- a/src/screens/SearchPage/SearchPage.module.scss
+++ b/src/screens/SearchPage/SearchPage.module.scss
@@ -6,10 +6,7 @@
   display: flex;
   padding-top: 69px;
   padding-bottom: 64px;
-}
-
-.sectionForm {
-  // display: flex;
+  padding-right: 0;
 }
 
 .title {
