--- a/src/screens/SearchPage/sections/SearchForm/SearchForm.module.scss
+++ b/src/screens/SearchPage/sections/SearchForm/SearchForm.module.scss
@@ -7,10 +7,109 @@
   margin-top: 47px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  display: inline-flex;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-right: 11px;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .input {
   font-size: 18px;
   letter-spacing: 0.03em;
   color: $Base-color-2;
+
+  & input {
+    width: 242px;
+    margin-top: 20px;
+  }
+}
+
+.selectLabel {
+  display: inline-block;
+  margin-top: 30px;
+  font-size: 18px;
+  letter-spacing: 0.03em;
+  color: $Base-color-2;
+}
+
+.select {
+  width: 242px;
+  margin-top: 20px;
+}
+
+.dateWrapper {
+  display: flex;
+  flex-direction: column;
+  margin-top: 39px;
+
+  & span {
+    font-size: 18px;
+    letter-spacing: 0.03em;
+    color: $Base-color-2;
+  }
+}
+
+.pickerBox {
+  display: flex;
+}
+
+.pickerWrapper {
+  width: 176px;
+  position: relative;
+  margin-right: 20px;
+  margin-top: 20px;
+  margin-bottom: 26px;
+
+  &:last-child {
+    margin-right: 0;
+  }
+
+  &::after {
+    content: url("./icon/arrow-bottom.svg");
+    position: absolute;
+    top: 50%;
+    right: 12px;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+}
+
+.picker {
+  width: 100%;
+  height: 43px;
+  background: $Base-color-3;
+  border: 1px solid $Secondary-color-4;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: $Base-color-2;
+
+  & > div {
+    border: none;
+    & > div {
+      padding: 0 32px 0 17px;
+    }
+  }
+}
+
+.submitWrap {
+  margin-top: auto;
+  margin-left: auto;
+  & button {
+    width: 305px;
+  }
+}
+
+.hint {
+  margin-top: 10px;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: $Secondary-color-5;
 }
