--- a/src/shared/CheckBox/CheckBox.module.scss
+++ b/src/shared/CheckBox/CheckBox.module.scss
@@ -6,16 +6,19 @@
   letter-spacing: 0.03em;
   color: $Base-color-2;
   margin-top: 15px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   cursor: pointer;
   user-select: none;
+  opacity: 0.4;
 }
 
 .labelCheckbox::before {
   content: "";
   width: 20px;
   height: 20px;
+  min-width: 20px;
+  min-height: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -24,6 +27,10 @@
   border: 1px solid $Base-color-2;
   margin-right: 17px;
   transition: all 300ms ease;
+}
+
+.checkbox:checked + .labelCheckbox {
+  opacity: 1;
 }
 
 .checkbox:checked + .labelCheckbox::before {
