--- a/src/shared/Input/Input.module.scss
+++ b/src/shared/Input/Input.module.scss
@@ -2,7 +2,8 @@
 @import "../../assets//style/mixin.scss";
 
 .label {
-  display: block;
+  display: flex;
+  flex-direction: column;
   margin-top: 20px;
   font-size: 16px;
   letter-spacing: 0.02em;
