--- a/src/Layouts/Header/Header.module.scss
+++ b/src/Layouts/Header/Header.module.scss
@@ -7,16 +7,26 @@
   font-size: 14px;
 }
 
+.logo,
+.nav,
+.wrapper {
+  flex-basis: 33.333%;
+}
+
 .nav {
   margin: 0 auto;
   user-select: none;
+  text-align: center;
 }
 
 .link {
   letter-spacing: 0.01em;
   color: $Base-color-2;
   margin-right: 49px;
-  &:last-child {
-    margin-right: 0;
-  }
+}
+
+.wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: end;
 }
