--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -9,3 +9,6 @@ $Secondary-color-2: #7CE3E1;
 $Secondary-color-3: #5970FF;
 $Secondary-color-4: #C7C7C7;
 $Secondary-color-5: #949494;
+$Secondary-color-6: #FF5959;
+$Secondary-color-7: #D9D9D9;
+$Secondary-color-8: #8AC540;
