--- a/src/shared/Input/Input.module.scss
+++ b/src/shared/Input/Input.module.scss
@@ -4,7 +4,7 @@
 .label {
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  margin: 20px 0;
   font-size: 16px;
   letter-spacing: 0.02em;
   color: $Secondary-color-5;
@@ -23,6 +23,21 @@
       text-align: center;
       color: $Secondary-color-5;
       opacity: 0.4;
+    }
+  }
+
+  &.error {
+    color: $Secondary-color-6;
+    & input {
+      color: inherit;
+      border: 1px solid $Secondary-color-6;
+      box-shadow: 0px 0px 10px rgba(255, 89, 89, 0.2);
+      border-radius: 5px;
+    }
+
+    span {
+      text-align: center;
+      color: inherit
     }
   }
 }
