--- a/src/Layouts/Header/LimitInfoBlock/LimitInfoBlock.module.scss
+++ b/src/Layouts/Header/LimitInfoBlock/LimitInfoBlock.module.scss
@@ -4,19 +4,33 @@
 .box {
   padding: 14px 10px;
   margin: 0 auto;
-  background-color: $Secondary-color-7;
-  opacity: 0.3;
   border-radius: 5px;
   font-size: 10px;
   color: $Base-color-2;
-  opacity: 0.4;
+  position: relative;
+  overflow: hidden;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: $Secondary-color-7;
+    opacity: 0.3;
+  }
+
+  .text {
+    filter: opacity(0.4);
+  }
 
   span {
     font-size: 14px;
     margin-left: 9px;
   }
 
-  p {
+  .textWrapper {
     display: flex;
     justify-content: end;
     align-items: center;
