--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -12,3 +12,4 @@ $Secondary-color-5: #949494;
 $Secondary-color-6: #FF5959;
 $Secondary-color-7: #D9D9D9;
 $Secondary-color-8: #8AC540;
+$Loader-color: #f3f3f3;
