--- a/src/shared/Document/Document.module.scss
+++ b/src/shared/Document/Document.module.scss
@@ -1,14 +1,23 @@
 @import "../../assets/style/theme.scss";
 @import "../../assets/style/mixin.scss";
 
+.wrapper_document {
+  flex: 1 1 50%;
+  max-width: 50%;
+  padding-bottom: 38px;
+    padding-right: 19px;
+    padding-left: 19px;
+  
+}
+
 .document {
-  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   background: $Base-color-3;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 19px 30px 35px;
-  margin-right: 38px;
-  margin-bottom: 38px;
   &:last-child {
     margin-right: 0;
   }
@@ -25,6 +34,7 @@
   }
 
   a {
+    color: inherit;
     text-decoration-line: underline;
     &:hover {
       text-decoration: none;
@@ -39,6 +49,7 @@
 }
 
 .mark {
+  width: fit-content;
   display: inline-block;
   background: $Secondary-color-1;
   border-radius: 5px;
@@ -49,19 +60,25 @@
 }
 
 .poster {
-  width: 100%;
+  height: 158px;
+  border-radius: 10px;
+  overflow: hidden;
   margin: 14px 0 20px;
+  img {
+    width: 100%;
+  }
 }
 
 .paragraph {
-  margin-bottom: 25px;
+  word-break: break-all;
   font-size: 16px;
   letter-spacing: 0.02em;
   opacity: 0.5;
 }
 
 .footerDocument {
-  margin-top: 32px;
+  margin-top: auto;
+  padding-top: 32px;
   display: flex;
   justify-content: space-between;
 
@@ -73,6 +90,7 @@
 }
 
 .sourceLink {
+  user-select: none;
   display: inline-block;
   padding: 14px 30px;
   font-size: 16px;
