--- a/src/assets/style/mixin.scss
+++ b/src/assets/style/mixin.scss
@@ -23,6 +23,11 @@
     @content;
   }
 }
+@mixin _375 {
+  @media screen and (max-width: 375px) {
+    @content;
+  }
+}
 @mixin _320 {
   @media screen and (max-width: 320px) {
     @content;
