--- a/src/screens/HomePage/sections/SectionHead/SectionHead.module.scss
+++ b/src/screens/HomePage/sections/SectionHead/SectionHead.module.scss
@@ -4,13 +4,25 @@
 .sectionHead {
   padding: 60px 540px 0 0;
   background: url("../../images/home-image-1.png") top right no-repeat;
+  @include _1024 {
+    padding: 30px 0 400px;
+    background: url("../../images/home-image-1.png") bottom center no-repeat;
+    background-size: contain;
+  }
 }
 
 .title {
   font-size: 60px;
+  @include _576 {
+    font-size: 28px;
+  }
 }
 
 .description {
   margin: 20px 150px 70px 0;
   font-size: 20px;
+  @include _1024 {
+    margin: 20px 0 32px;
+    font-size: 18px;
+  }
 }
