--- a/src/shared/Button/Button.module.scss
+++ b/src/shared/Button/Button.module.scss
@@ -1,12 +1,17 @@
 @import "../../assets/style/theme.scss";
+@import "../../assets/style/mixin.scss";
 
 .button {
-  min-width: 305px;
+  width: 100%;
+  max-width: 305px;
   padding: 16px 50px;
   background-color: $Secondary-color-3;
   border-radius: 5px;
   color: $Base-color-3;
   transition: all 300ms ease;
+  @include _576 {
+    max-width: 375px;
+  }
 
   &:hover {
     background-color: $Secondary-color-1;
