--- a/src/shared/SlideCardInfo/SlideCardInfo.module.scss
+++ b/src/shared/SlideCardInfo/SlideCardInfo.module.scss
@@ -6,4 +6,7 @@
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   padding: 20px;
+  @include _576 {
+    padding: 15px;
+  }
 }
