--- a/src/Layouts/Header/MobileNavMenu/MobileNavMenu.module.scss
+++ b/src/Layouts/Header/MobileNavMenu/MobileNavMenu.module.scss
@@ -31,3 +31,15 @@
   color: $Base-color-3;
   margin-top: 26px;
 }
+
+.logout {
+  background-color: $Secondary-color-2;
+  border-radius: 5px;
+  color: $Base-color-2;
+  width: 76%;
+  text-align: center;
+  margin-top: auto;
+  padding: 15px;
+  font-size: 20px;
+  letter-spacing: 0.01em;
+}
