--- a/src/screens/SearchOutputPage/SearchOutputPage.module.scss
+++ b/src/screens/SearchOutputPage/SearchOutputPage.module.scss
@@ -3,17 +3,26 @@
 
 .main {
   padding-bottom: 109px;
+  @include _1024 {
+    padding-bottom: 57px;
+  }
 }
 
 .documentList {
   display: flex;
-  flex-wrap: wrap;
   padding-top: 58px;
+  @include _1024 {
+    flex-direction: column;
+    padding-top: 34px;
+  }
 }
 
 .titleList {
   font-size: 30px;
   letter-spacing: 0.02em;
+  @include _576 {
+    font-size: 28px;
+  }
 }
 
 .buttonList {
