--- a/src/screens/SearchPage/sections/SectionForm/SectionForm.module.scss
+++ b/src/screens/SearchPage/sections/SectionForm/SectionForm.module.scss
@@ -1,14 +1,35 @@
 @import "../../../../assets/style/theme.scss";
 @import "../../../../assets/style/mixin.scss";
 
+.wrapperText {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  img {
+    width: 17%;
+  }
+}
 
 .title {
   font-size: 40px;
   letter-spacing: 0.03em;
+  @include _576 {
+    font-size: 28px;
+    letter-spacing: 0.01em;
+  }
 }
 
 .description {
   margin-top: 25px;
   font-size: 20px;
   letter-spacing: 0.02em;
+  @include _1024 {
+    margin-top: 19px;
+    letter-spacing: normal;
+  }
+
+  @include _576 {
+    font-size: 18px;
+  }
 }
