--- a/src/screens/LoginPage/LoginPage.module.scss
+++ b/src/screens/LoginPage/LoginPage.module.scss
@@ -4,4 +4,15 @@
 .wrapper {
   display: flex;
   padding: 70px 0 80px;
+  @include _1024 {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0 80px;
+  }
+}
+
+.image {
+  width: 100%;
+  max-width: 375px;
+  margin-top: 50px;
 }
