--- a/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
+++ b/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
@@ -8,7 +8,6 @@
   border-radius: 10px;
   padding: 25px 25px 39px 25px;
   margin: 0 80px 0 40px;
-
   position: relative;
   &::before {
     content: url("../../images/Castle.svg");
@@ -16,6 +15,18 @@
     top: 0;
     left: 0;
     transform: translate(-50%, -50%);
+    @include _1024 {
+      left: auto;
+      right: 50%;
+      transform: translate(0, -80%);
+    }
+  }
+  @include _1024 {
+    width: 100%;
+    min-width: auto;
+    max-width: 429px;
+    margin: 0;
+    padding: 25px 15px;
   }
 }
 
@@ -34,6 +45,9 @@
   margin-right: 15px;
   font-size: 16px;
   letter-spacing: 0.02em;
+  @include _576 {
+    font-size: 14px;
+  }
 
   &:last-child {
     margin-right: 0;
@@ -47,6 +61,7 @@
 
 .button {
   width: 100%;
+  max-width: 100%;
   margin: 30px 0 15px;
 }
 
