--- a/src/screens/LoginPage/sections/SectionTitle/SectionTitle.module.scss
+++ b/src/screens/LoginPage/sections/SectionTitle/SectionTitle.module.scss
@@ -1,16 +1,22 @@
 @import "../../../../assets/style/theme.scss";
 @import "../../../../assets/style/mixin.scss";
 
-
 .section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  @include _1024 {
+    display: block;
+    padding-bottom: 126px;
+  }
 }
 
 .title {
   font-size: 40px;
   letter-spacing: 0.02em;
+  @include _576 {
+    font-size: 22px;
+  }
 }
 
 .image {
