--- a/src/assets/style/theme.scss
+++ b/src/assets/style/theme.scss
@@ -4,12 +4,12 @@ $Base-color-2: #000000;
 $Base-color-3: #ffffff;
 
 // secondary colors
-$Secondary-color-1: #FFB64F;
-$Secondary-color-2: #7CE3E1;
-$Secondary-color-3: #5970FF;
-$Secondary-color-4: #C7C7C7;
+$Secondary-color-1: #ffb64f;
+$Secondary-color-2: #7ce3e1;
+$Secondary-color-3: #5970ff;
+$Secondary-color-4: #c7c7c7;
 $Secondary-color-5: #949494;
-$Secondary-color-6: #FF5959;
-$Secondary-color-7: #D9D9D9;
-$Secondary-color-8: #8AC540;
+$Secondary-color-6: #ff5959;
+$Secondary-color-7: #d9d9d9;
+$Secondary-color-8: #8ac540;
 $Loader-color: #f3f3f3;
