fix button hover and error login page

--- a/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
+++ b/src/screens/LoginPage/sections/SectionForm/SectionForm.module.scss
@@ -73,3 +73,10 @@
   text-decoration-line: underline;
   text-align: center;
 }
+
+.error {
+  
+  font-size: inherit;
+  text-align: center;
+  color: $Secondary-color-6;
+}
